@@ -42,6 +42,7 @@ Gem::Specification.new do |s|
      "test/active_record/allowing_values_test.rb",
      "test/active_record/belongs_to_test.rb",
      "test/active_record/has_many_test.rb",
+     "test/active_record/validates_length_of_test.rb",
      "test/active_record/validates_presence_of_test.rb",
      "test/active_record/validates_uniqueness_of_test.rb",
      "test/rails_context_test.rb",
@@ -64,6 +65,7 @@ Gem::Specification.new do |s|
      "test/active_record/allowing_values_test.rb",
      "test/active_record/belongs_to_test.rb",
      "test/active_record/has_many_test.rb",
+     "test/active_record/validates_length_of_test.rb",
      "test/active_record/validates_presence_of_test.rb",
      "test/active_record/validates_uniqueness_of_test.rb",
      "test/rails_context_test.rb",
