@@ -5,7 +5,7 @@ context "The validates_uniqueness_of assertion macro" do
 
   should("fail without a persisted record") do
     topic.asserts("room") do
-      Room.new(:email => "foo@bar.baz", :foo => "what")
+      Room.new(:email => "foo@bar.baz")
     end.validates_uniqueness_of(:email).run(Riot::Situation.new)
   end.equals([:fail, "must use a persisted record when testing uniqueness of :email"])
 
